[gd_scene load_steps=9 format=3 uid="uid://dn5j2h175sk1p"]

[ext_resource type="Script" path="res://main.gd" id="1_rstm7"]
[ext_resource type="FontFile" uid="uid://cyddxsrr0mcxi" path="res://assets/fonts/unifont-16.0.02.otf" id="2_3h27g"]
[ext_resource type="Texture2D" uid="uid://dwdx4rlggcx7d" path="res://assets/background.jpg" id="2_w3hb6"]
[ext_resource type="AudioStream" uid="uid://b1g1mxc7vpf1f" path="res://assets/sounds/drop.mp3" id="3_u1754"]
[ext_resource type="AudioStream" uid="uid://dxfygh5sbawso" path="res://assets/sounds/ding.mp3" id="4_k32rp"]

[sub_resource type="LabelSettings" id="LabelSettings_nl362"]
font = ExtResource("2_3h27g")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_017m4"]
font = ExtResource("2_3h27g")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_urdox"]
font = ExtResource("2_3h27g")
font_size = 122
outline_size = 4
outline_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
shadow_size = 19
shadow_color = Color(0.0235294, 0.0196078, 0.0117647, 0.670588)
shadow_offset = Vector2(10, 10)

[node name="Main" type="Node"]
script = ExtResource("1_rstm7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="title" type="Label" parent="CanvasLayer"]
offset_left = 70.0
offset_top = 32.0
offset_right = 451.0
offset_bottom = 93.0
tooltip_text = "title"
mouse_filter = 1
text = "手眼协调训练软件"
label_settings = SubResource("LabelSettings_nl362")

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 70.0
offset_top = 133.0
offset_right = 350.0
offset_bottom = 204.0
text = "score: 0"
label_settings = SubResource("LabelSettings_017m4")

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 664.0
offset_top = 280.0
offset_right = 1306.0
offset_bottom = 478.0
text = "GameOver"
label_settings = SubResource("LabelSettings_urdox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer"]
offset_left = 834.0
offset_top = 553.0
offset_right = 1191.0
offset_bottom = 630.0
text = "Restart"

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
z_as_relative = false
position = Vector2(960.889, 542.75)
scale = Vector2(1.50069, 1.50069)
texture = ExtResource("2_w3hb6")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]

[node name="ballEpired" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_u1754")
attenuation = 0.757858
max_polyphony = 10

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_k32rp")

[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
